yaml/istio-cluster/web-appA-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
      version: v1
  template:
    metadata:
      labels:
        app: web
        version: v1
    spec:
      containers:
      - image: shinyay/envweb:0.0.1
        imagePullPolicy: IfNotPresent
        name: envweb
        ports:
        - containerPort: 8080
