yaml/istio-cluster/web-appB-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
      version: v2
  template:
    metadata:
      labels:
        app: web
        version: v2
    spec:
      containers:
      - image: shinyay/envweb:0.0.1
        imagePullPolicy: IfNotPresent
        name: envweb
        ports:
        - containerPort: 8080
