yaml/istio-cluster/web-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
  selector:
    app: web
